# zititex-api

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_MCP.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.dev  GIT_SETUP.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  docker-compose.dev.yml  docker-compose.yml  git_status_backup.txt  package.json  prompts.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.md  serverless.yml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  deploy.yml  pr.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: contact.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  client.py
app/repositories/: __init__.py  client_repository.py
app/schemas/: __init__.py  client.py
app/services/: __init__.py  mailgun.py
docker/mysql/init/: 01-create-tables.sql
document/: .gitkeep  00-LEEME-PRIMERO.md  API_CORREO.md  AWS_PERMISOS.md  DESPLIEGUE.md  ESTADO_TESTS.md  ESTRUCTURA.md  GIT_WORKFLOW.md  INDICE.md  PYTEST.md  README.md  RESUMEN_ORGANIZACION.md  REVISION_COMPLETA.md  SETUP_LOCAL.md  VERIFICACION_ESTRUCTURA.md  VERIFICACION_SERVERLESS.md  prompts.md  run.md
src/: __init__.py  main.py
src/application/: __init__.py
src/application/use_cases/: base.py
src/domain/: exceptions.py
src/domain/entities/: base.py
src/domain/repositories/: base.py
src/infrastructure/: __init__.py
src/infrastructure/config/: settings.py
src/infrastructure/database/: base.py  session.py
src/presentation/: __init__.py
src/presentation/api/v1/: router.py
src/presentation/api/v1/endpoints/: health.py
tests/: __init__.py  conftest.py  test_api_contact.py  test_config.py  test_main.py  test_models.py  test_repositories.py  test_schemas.py  test_services.py
tests/integration/: test_health.py  test_main.py
tests/unit/domain/: test_entities.py  test_exceptions.py
